--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,15 @@ body,
 .navbar {
   font-weight: 500;
 }
+
+.bg-dark hr {
+  border-color: #ff5722;
+}
+
+.bg-light hr {
+  border-color: black;
+}
+
+.bg-open-gray {
+  background-color: #303030 !important;
+}
